fix(docs): show params in swagger
